--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 <!-- Шапка -->
-<header>
+  <header>
     <div class="container flex-header">
         <nav class="flex-nav">
           <a href="./index.html" class="logo">Web<span class="logo-black">Studio</span></a>
@@ -210,6 +210,21 @@
           </li>
         </ul>
       </div>
+
+      <div class="join">
+        <h3 class="title-footer">Подпишитесь на рассылку</h3>
+      <form name="join-form" class="join-form">
+        <div class="join-div">
+          <input type="email" class="input-join" name="email" placeholder="E-mail"/>
+          <button type="submit" class="button-join">Подписаться
+            <svg class="icon-join">
+              <use href="./img/sprite.svg#icon-telegram"></use>
+            </svg>
+          </button>
+        </div>
+      </form>
+      </div>
+
   </div>
   </footer>
 </body>
